add request limit

--- a/static/analyst.html
+++ b/static/analyst.html
@@ -354,17 +354,12 @@
       <a href="/ui/execute">Execute</a>
       <a href="/backtest">Backtest</a>
       <a href="/agent/analyst">Analyst</a>
+      <a href="/agent/expert">Expert</a>
     </nav>
+    <div id="userLine" class="pill">Loading profile...</div>
     <button class="logout-btn" id="logoutBtn">Logout</button>
   </div>
   <div class="wrap">
-    <header>
-      <div class="badge">Stock Analyst Agent</div>
-      <h1>Next-day strategy insights from your account context</h1>
-      <p class="subtitle">Select a trade account and stock, pull recent price action, and get a structured plan with risk-aware guidance.</p>
-      <div id="userLine" class="pill">Loading profile…</div>
-    </header>
-
     <section class="layout">
       <div class="panel">
         <h2>Analysis setup</h2>
